# data-science

./: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README.md.backup  SESSION_MATERIALS_SUMMARY.md  STREAMLIT_APPS_SUMMARY.md  pyproject.toml  requirements.txt
bootcamp_simplified/: CHANGELOG.md  QUICKSTART.md  README.md
bootcamp_simplified/slides/: 00_bootcamp_overview.md  01_session1_pandas.md  02_session2_duckdb_visualization.md  03_session3_streamlit_basics.md  04_session4_streamlit_complete.md  chrome-wrapper.sh
data/: RUP-PaketPenyedia-Terumumkan-2025.parquet  rup_cleaned.parquet
datasets/rup/: README.md
day1/session2_duckdb/: README.md
day1/session3_visualization/: README.md
day2/session4_advanced_analysis/: README.md
day2/session5_streamlit/: STREAMLIT_QUICKSTART.md
materi_bootcamp/: requirements.txt
materi_bootcamp/slides/: 03_session3_streamlit_basics.md  04_session4_streamlit_complete.md  README.md  convert_slides.sh
materi_bootcamp_old/slides/: 00_overview.md  01_session1_pandas.md  03_session3_visualization.md  04_session4_advanced.md  05_session5_streamlit.md
slides/: 00_overview.md  01_session1_pandas.md  02_session2_duckdb.md  03_session3_visualization.md  04_session4_advanced.md  05_session5_streamlit.md  README.md
slides/indo/: 00_overview_indo.md  01_session1_pandas_indo.md  (+4 more)
slides_backup/: 00_overview.md  04_session4_advanced.md
slides_backup_beginner/: 00_overview.md  01_session1_pandas.md  02_session2_duckdb.md  03_session3_visualization.md  04_session4_advanced.md  05_session5_streamlit.md  README.md
(+51 files in other folders)
