[project]
name = "data-science"
version = "0.1.0"
description = "Bootcamp Data Analysis - RUP (Rencana Umum Pengadaan) Analysis Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "duckdb>=0.9.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.16.3",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "missingno>=0.5.2",
]
